wp-content/themes/reyn/assets/styles/layouts/_legacy.scss
.page-template-template-legacy {
	#wrapper {
		max-width: 1600px;
		margin: 0 auto;
	}
}

.legacyheritage {
	background:white url(../images/legacy-page-bg.jpg) repeat center 1145px;
	// Now override the bg color of the footer to cancel out the above
	.club-cta, .content-info {
		background-color:white;
	}
}

.page-legacy--full-width {
	height: 406px;
	background-size: cover;
	clear: both;
	&.full-width-legacy-bg {
		background:url(../images/legacy-page-full-width-stripe.jpg) no-repeat center center;
		margin-top: -60px;
	}
	@media (max-width:$screen-sm-max) {
		height: 50vh;
		background-size:cover !important;
	}
}

.legacy-block,
.full-width-legacy-bg {
	clear: both;
	//padding: 0 0 235px 0;
	margin-bottom: 120px;
	@media (max-width:$screen-sm-max) {
		margin-bottom: 2em;
	}
}

.legacy-block .row {
	margin-bottom: 0;
}

.legacy-block + .full-width-legacy-bg {
    margin-top: 150px;
    margin-bottom: 60px;
}

.legacy-block--container {
	width:50%;
	display: inline-block;
	vertical-align: middle;
	&:first-child {
		margin-right: -4px;
	}
	&:not(.legacy-block--image-left) {
		margin-left: 30px;
		width:46%;
		@media (max-width:$screen-sm-max) {
			width:auto;
			margin: 0;
		}
	}
	@media (max-width:$screen-sm-max) {
		display: block;
		//width:auto;
		overflow: hidden;
		margin: 0 0 2em 0;
		width: auto !important;
		img {
			display: block;
			margin: 0 auto;
		}
	}
}

.legacy-block {
	line-height: 1.4;
	max-width: 94%;
	margin: 9em auto;	
	clear:both;
	> .legacy-block--container:not(.legacy-block--image-left):first-of-type {
		margin-left: 0;
		margin-right: 30px;
		@media (max-width:$screen-sm-max) {
			margin-right: 0;
		}

		//float: right;
		.legacy-block--content {
			margin-right: 30px;
			max-width: 100%;
		}
	}
	@media (max-width:$screen-sm-max) {
		margin: 3em auto;
	}
}

.legacy-block--content {
	line-height: 1.4;
	float: right;
	text-align: left;
	margin: 0 100px 0 0;
	max-width: 500px;
	float: left;
	@media (max-width:$screen-sm-max) {
		width:auto;
		max-width: 95%;
		text-align: center;
		margin: 0 auto;
		float: none;
		hr {
			margin-left: auto !important;
			margin-right: auto;
		}
	}
	&.text-right {
		float: left;
		margin: 0 0 0 100px;
	}
	h1,h2, h3 {
		font-family: $font-family-sans-serif;
		font-size: 20px;
		letter-spacing: 1px;
		font-weight: 400;
		color: $brand-primary;
		margin: 0 0 26px;
	}
	hr {
		margin-left: 0;
		margin-bottom: 26px;
		border-color: #ebebeb;
	}
}

.legacy-block--headline {
	@media (max-width:$screen-xs-max) {
		margin: .5em 0 0;
	}
	h1,h2,h3 {
		font-size: 34px;
		color:#223558;
		margin-bottom: 30px;
		@media (max-width:$screen-xs-max) {
			//margin: 0 0 10px;
		}
	}
	h1 {
		@media (max-width:$screen-xs-max) {
			margin: 0 0 10px;
		}
	}
	h2 {
		font-size:28px;
	}
	h3 {
		font-size: 20px;
		font-weight: 400;
		line-height: 1.3;
		font-family: $font-family-sans-serif;
		margin-bottom: 10px;
	}
	hr {
		border-color:#ebebeb;
	}
	margin: 1em 0 0;
}

.page-legacy--container {
	.legacy-block:nth-child(2) {
    	margin-top: 60px;
    	@media (max-width:$screen-xs-max) {
    		margin-top: 3em;
    	}
    }
}

.full-width-legacy-bg {
	//margin-bottom: 60px;
	.cta-box {
		text-align: center;
		margin: 0 auto;
		width:557px;
		position: relative;
		top: -60px;
		@media (max-width:$screen-xs-max) {
			width:auto;
			&.zoom-on-hover {
				width:auto;
			}
		}
		&.cta-box--floral:before {
			background:$brand-primary url(../images/cta-texture-555x195.png) no-repeat;
				background-size:cover;
		}
		.cta-box--content {
			padding-top: 15px;
				padding-bottom: 33px;
		}
		&.zoom-on-hover {
			width: 556px;
			height: auto;
		}
		hr {
			border-color: $gray-lighter;
		}
	}
}

.full-width-legacy-bg [class*=cta-box]:not(.cta-box--content) h3 {
    font-size: 24px;
    line-height: 1.45;
}

.legacy-page__title {
	font-size: 31px;
	margin: 30px 0 0;
	line-height: 1.3;
	padding-bottom: 23px;
}

